# software-engineering-group24-25-19

./: README.md
.github/workflows/: backend-ci.yaml  deploy.yml
Data Analysis/: Database Views.docx  Database Views.xlsx  Spreadsheet Documentation.docx
Data Analysis/Original Excel Files/: Multi Year Footprint -Uni students.xlsx  (+1 more)
backend/: Cargo.toml  Containerfile
backend/.cargo/: config.toml
backend/src/: api_error.rs  app_state.rs  custom_extractors.rs  main.rs  structs.rs
backend/src/entities/: access_code.rs  electricity_usage_record.rs  emission_factor.rs  gas_usage_record.rs  heating_degree_day.rs  mod.rs  site.rs
backend/src/routes/: electricity_usage.rs  emission_factors.rs  fallback.rs  gas_usage.rs  mod.rs  sites.rs  upload.rs
backend/src/routes/auth/: mod.rs
backend/src/routes/auth/login/: mod.rs  post.rs
backend/src/routes/auth/verify_session/: mod.rs  post.rs
backend/src/routes/carbon_emissions/: mod.rs
backend/src/routes/carbon_emissions/records/: get.rs  mod.rs
backend/src/routes/electricity_usage/: mod.rs  records.rs
backend/src/routes/electricity_usage/records/: get.rs  mod.rs
backend/src/routes/emission_factors/: get.rs  mod.rs  post.rs
backend/src/routes/gas_usage/: mod.rs
backend/src/routes/gas_usage/records/: get.rs  mod.rs
backend/src/routes/heating_degree_days/: get.rs  mod.rs
backend/src/routes/kwh_per_hdd/: mod.rs
backend/src/routes/kwh_per_hdd/records/: get.rs  mod.rs
backend/src/routes/login/: post.rs
backend/src/routes/sites/: get.rs  mod.rs  post.rs
backend/src/routes/sites/_id/: delete.rs  get.rs  mod.rs  patch.rs  path_params.rs
backend/src/routes/upload/: mod.rs  post.rs
data/: report.xlsx
database/: compose.yaml  init.sql
designs/: index 2.html  index.html  main 2.css  main.css  signin 2.htmk
documents/: api-specifications.yaml  user-requirements.md
durmetrics/: GRAPHS.md  package-lock.json  package.json
durmetrics/src/: App.js  (+2 more)
(+52 files in other folders)
