[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.7.7", features = ["multipart"] }
calamine = "0.26.1"
sea-orm = { version = "1.1.2", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
