[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie", "query"] }
calamine = "0.26.1"
chrono = "0.4"
jsonwebtoken = "8.0"
md5 = "0.7"
sea-orm = { version = "1.1.4", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
sea-orm = { version = "1.1.4", features = ["mock"] }
